Ajustes menores a la configuracion del proyecto

--- a/TPF_2024-2C/makefile
+++ b/TPF_2024-2C/makefile
@@ -7,7 +7,7 @@ OBJ_DIR = $(OUT_DIR)/obj
 DOC_DIR = $(OUT_DIR)/doc
 
 CC = gcc
-CFLAGS = -Wall -std=c99 -pedantic
+CFLAGS = -Wall -std=c99 -pedantic -O3
 
 SRC_FILES = $(wildcard $(SRC_DIR)/*.c)
 OBJ_FILES = $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC_FILES))
@@ -18,7 +18,7 @@ OBJ_FILES = $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC_FILES))
 
 all: $(OBJ_FILES)
 	@echo Enlazando $@
-	$(CC) $(OBJ_FILES) -o $(OUT_DIR)/$(TARGET)
+	$(CC) $(CFLAGS) $(OBJ_FILES) -o $(OUT_DIR)/$(TARGET)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	@echo Compilando $<
@@ -26,15 +26,16 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) -o $@ -c $< -I$(INC_DIR) -MMD
 
 clean:
-	@rm -r $(OUT_DIR)
+	@rm -r $(OBJ_DIR)
+	@rm  $(OUT_DIR)/$(TARGET)
 
 run: $(OUT_DIR)/$(TARGET)
 	@echo Ejecutando $<
 	@./$(OUT_DIR)/$(TARGET)
 
 debug: $(OUT_DIR)/$(TARGET)
-	@echo "Debugging $<..."
-	@valgrind --leak-check=full --show-leak-kinds=all -s ./$(OUT_DIR)/$(TARGET)
+	@echo Debugging $<
+	@valgrind --leak-check=full --show-leak-kinds=all -s $(OUT_DIR)/$(TARGET)
 
 doc:
 	@mkdir -p $(DOC_DIR)
